@@ -1,3 +1,13 @@
+2007-02-05  Tomas Cerha  <cerha@brailcom.org>
+
+	* speechd/client.py (_SSIP_Connection.__init__): Thread name
+	changed.
+	(SSIPClient.__init__): Allocate lock.
+	(SSIPClient._callback_handler): Lock before accessing
+	`self._callbacks'.
+	(SSIPClient.speak): Added more doc.  Lock before accessing
+	`self._callbacks'.
+
 2007-01-29  Tomas Cerha  <cerha@brailcom.org>
 
 	* speechd/client.py (SSIPClient._callback_handler)
